--- a/index.html
+++ b/index.html
@@ -434,6 +434,7 @@
                 <h3>Social Media</h3>
                 <div class="social-links">
                     <a href="https://www.instagram.com/patelpriyank.d/" class="social-link" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://twitter.com/Priyank_P16" class="social-link" target="_blank"><i class="fab fa-twitter"></i></a>
                     <a href="https://www.linkedin.com/in/patel-priyank-945131288/" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
