--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: #f3f4f6;
+            background-color: #e1e1e1;
             color: var(--text);
             line-height: 1.6;
             overflow-x: hidden;
