--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
             --radius-lg: 1.5rem;
             
             /* Section Colors */
-            --drawing-primary: #f43f5e;
-            --drawing-secondary: #e11d48;
-            --films-primary: #8b5cf6;
-            --films-secondary: #7c3aed;
+            --drawing-primary: #3f57f4;
+            --drawing-secondary: #411de1;
+            --films-primary: #f65c5c;
+            --films-secondary: #ed3a3a;
             --music-primary: #10b981;
             --music-secondary: #059669;
-            --blog-primary: #a0b910;
-            --blog-secondary: #749605;
+            --blog-primary: #000000;
+            --blog-secondary: #4e5152;
         }
 
         * {
